--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -77,7 +77,8 @@
 				</ul>
 				<a class="stackoverflow" href="http://stackoverflow.com/users/79254/anthonyvscode">
 					<img src="http://stackoverflow.com/users/flair/79254.png" width="208" height="58" alt="profile for anthonyvscode at Stack Overflow, Q&amp;A for professional and enthusiast programmers" title="profile for anthonyvscode at Stack Overflow, Q&amp;A for professional and enthusiast programmers">
-				</a>				
+				</a>
+				<iframe width="208" height="208" src="https://rd.io/i/wU0S6TcvQBHy/" frameborder="0"></iframe>
 			</aside>
 		</div>
 	</div>
