--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -78,7 +78,7 @@
 				<a class="stackoverflow" href="http://stackoverflow.com/users/79254/anthonyvscode">
 					<img src="http://stackoverflow.com/users/flair/79254.png" width="208" height="58" alt="profile for anthonyvscode at Stack Overflow, Q&amp;A for professional and enthusiast programmers" title="profile for anthonyvscode at Stack Overflow, Q&amp;A for professional and enthusiast programmers">
 				</a>
-				<iframe width="208" height="208" src="https://rd.io/i/wU0S6TcvQBHy/" frameborder="0"></iframe>
+				<iframe width="200" height="200" src="https://rd.io/i/QU0S6TOfNsc/" frameborder="0"></iframe>
 			</aside>
 		</div>
 	</div>
