replaced rdio with last.fm

--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -78,7 +78,7 @@
 				<a class="stackoverflow" href="http://stackoverflow.com/users/79254/anthonyvscode">
 					<img src="http://stackoverflow.com/users/flair/79254.png" width="208" height="58" alt="profile for anthonyvscode at Stack Overflow, Q&amp;A for professional and enthusiast programmers" title="profile for anthonyvscode at Stack Overflow, Q&amp;A for professional and enthusiast programmers">
 				</a>
-				<iframe width="200" height="200" src="https://rd.io/i/QU0S6TOfNsc/" frameborder="0"></iframe>
+				<a style="width: 200px;" href="http://www.last.fm/user/anthonyvscode/?chartstyle=lastfmplain"><img src="http://imagegen.last.fm/lastfmplain/recenttracks/10/anthonyvscode.gif" border="0" /></a>
 			</aside>
 		</div>
 	</div>
