--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -59,7 +59,7 @@
 					<img class="grav" src='http://www.gravatar.com/avatar/89ec1ce4d9e7f5aa1ee4b122afac4d33' alt="Anthony Zigenbine" />
 				    <div class="short-info">
 					   <strong>Anthony Zigenbine</strong>
-                       <p id="site-description">Web Developer + Co-Founder of <a href="http://tboda.com">TBODA</a>.</p>
+                       <p id="site-description">Application / Web Developer, Music Lover, Coffee Snob</p>
 				    </div>
                 </div>
 
